# fastcat

./: .clang-format  .cppcheck_suppressions.txt  .doxyfile.in  .gitignore  CMakeLists.txt  LICENSE.md  README.md
.github/: CODEOWNERS
.github/workflows/: build.yaml  build.yml  docs.yml  patch-action.yml  test.yaml  test.yml
cmake/: FindFastcat.cmake  FindYamlCpp.cmake  Findreadline.cmake
doc/: config_params.md  fastcat_device_config_parameters.md  fastcat_primer.md  fastcat_types_params.md  offline_rationale.md  utilities.md
example_configs/: README.md  one_of_every_device_offline.yaml
example_configs/offline/: faulter_config.yaml  fts_device_config.yaml  offline_jsd_config.yaml  robotic_arm_config.yaml  signal_processing_config.yaml  zero_latency_config.yaml
example_configs/online/: README.md  bbx_heater_config.yaml  bbx_motor_sine_config.yaml
example_configs/paper_examples/: paper_faulter_config.yaml  paper_testbed_config.yaml
example_configs/single/: actuator_online.yaml  ati_fts_online.yaml  egd_offline_config.yaml  el2124_offline_config.yaml  el3208_offline_config.yaml  el3602_offline_config.yaml  jed0101_offline_config.yaml  jed0200_offline_config.yaml  jed_offline_config.yaml
fcviz/: fcviz.py
src/: CMakeLists.txt  config.h.in  device_base.cc  device_base.h  fastcat.h  manager.cc  manager.h  mutex.h  ring_buffer.h  signal_handling.h  thread_safe_queue.h  transform_utils.cc  transform_utils.h  trap.c  trap.h  types.h  yaml_parser.cc  yaml_parser.h
src/fastcat_devices/: commander.h  conditional.cc  conditional.h  fastcat_device_base.h  faulter.cc  faulter.h  filter.cc  filter.h  fts.cc  fts.h  function.cc  function.h  linear_interpolation.cc  linear_interpolation.h  pid.cc  pid.h  saturation.cc  saturation.h  schmitt_trigger.cc  schmitt_trigger.h  signal_generator.cc  signal_generator.h  three_node_thermal_model.cc  three_node_thermal_model.h  virtual_fts.cc  virtual_fts.h
src/fcgen/: README.md  commander.cc.cog  device_includes.h.cog  fastcat_commands.yaml  fastcat_devices.yaml  fastcat_enums.yaml  fastcat_types.yaml  signal_handling.cc.cog  types.h.cog
src/fcgen/templates/: bak.txt  commander.cc.cog  device_config_parsing_libyamlcpp.h.cog  device_includes.h.cog  enum_conversions.h.cog  signal_handling.cc.cog  types.h.cog
src/jsd/: .actuator_fsm_helpers.cc.swn  actuator.cc  actuator.h  actuator_fsm_helpers.cc  actuator_manager_interface.h  actuator_offline.cc  actuator_offline.h  actuator_utils.cc  actuator_utils.h  ati_fts.cc  ati_fts.h  ati_fts_offline.cc  ati_fts_offline.h  egd.cc  egd.h  egd_actuator.cc  egd_actuator.h  egd_actuator_offline.cc  egd_actuator_offline.h  egd_offline.cc  egd_offline.h  el1008.cc  el1008.h  el1008_offline.cc  el1008_offline.h  el2124.cc  el2124.h  el2124_offline.cc  el2124_offline.h  el2798.cc  el2798.h  el2798_offline.cc  el2798_offline.h  el2809.cc  el2809.h  el2809_offline.cc  el2809_offline.h  el2828.cc  el2828.h  el2828_offline.cc  (+77 more)
test/: CMakeLists.txt  plot_delayed_actuator_telemetry.py  plot_delayed_actuator_telemetry_sweep.py  run_delayed_actuator_cmd_sweep.sh  test_cli.cc  test_config.cc  test_delayed_actuator_cmd.cc  test_filter.cc
test/device_tests/: CMakeLists.txt  test_ati_fts.cc  test_commander.cc  test_conditional.cc  test_fts.cc  test_function.cc  test_gold_actuator.cc  test_linear_interpolation.cc  test_schmitt_trigger.cc  test_signal_generator.cc  test_virtual_fts.cc  test_yaml_parser.cc
test/device_tests/test_ati_fts_yamls/: nominal.yaml
test/device_tests/test_commander_yamls/: c3_config.yaml
test/device_tests/test_conditional_yamls/: c3_config.yaml
test/device_tests/test_fts_yamls/: fts_wide_cal_matrix.yaml
test/device_tests/test_function_yamls/: f2_config.yaml  f3_config.yaml
test/device_tests/test_linear_interpolation_yamls/: invalid_1.yaml  invalid_3.yaml  invalid_5.yaml  invalid_6.yaml  invalid_7.yaml  valid_abs_no_error.yaml
test/device_tests/test_schmitt_trigger_yamls/: st1_config.yaml  st2_config.yaml  st3_config.yaml
test/device_tests/test_signal_generator_yamls/: sg1_config.yaml  sg2_config.yaml  sg3_config.yaml
test/device_tests/test_virtual_fts_yamls/: nominal.yaml
test/device_tests/test_yaml_parser_yamls/: yaml_parser_config.yaml
test/fastcat_test_app/: CMakeLists.txt  README.md  ftest.cc  ftest_invalid_access.cc
test/test_unit/: CMakeLists.txt  test_actuator.cc  test_ati_fts.cc  test_commander.cc  test_conditional.cc  test_delayed_actuator_cmd.cc  test_egd_actuator.cc  test_fts.cc  test_function.cc  test_gold_actuator.cc  test_jsd_device_base.cc  test_linear_interpolation.cc  test_schmitt_trigger.cc  test_signal_generator.cc  test_three_node_thermal_model.cc  test_transform_utils.cc  test_trap.cc  test_virtual_fts.cc  test_yaml_parser.cc
test/test_unit/test_actuator_yamls/: valid.yaml  valid_with_opts.yaml  valid_with_power.yaml
test/test_unit/test_commander_yamls/: c1_config.yaml  c2_config.yaml  c3_config.yaml  sig_gen_config.yaml
test/test_unit/test_conditional_yamls/: c1_config.yaml  c2_config.yaml
test/test_unit/test_delayed_actuator_cmd_yamls/: tnet_testbed_config.yaml
test/test_unit/test_egd_actuator_yamls/: valid.yaml  valid_with_opts.yaml  valid_with_power.yaml
test/test_unit/test_fts_yamls/: nominal.yaml
test/test_unit/test_function_yamls/: f1_config.yaml
test/test_unit/test_gold_actuator_yamls/: valid.yaml  valid_with_opts.yaml  valid_with_power.yaml
test/test_unit/test_linear_interpolation_yamls/: invalid_2.yaml  invalid_4.yaml  valid_abs.yaml  valid_squared.yaml
test/test_unit/test_signal_generator_yamls/: sg4_config.yaml
test/test_unit/test_three_node_thermal_model_yamls/: invalid_num_signals.yaml  invalid_num_temps.yaml  valid.yaml
test/test_unit/test_yaml_parser_yamls/: yaml_parser_config.yaml
test/unit_tests/: CMakeLists.txt  test_device_config_parsing_libyamlcpp.cc  test_enum_conversions.cc  test_jsd_device_base.cc
utils/: CMakeLists.txt  elmo_pos_profile.cpp  elmo_vel_profile.cpp  solo_vel_profile.cpp
zephyr_shim/: yaml.cpp
zephyr_shim/yaml-cpp/: yaml.h
